initial port to Qt5. compiles. some cleaning up of cmake files needed, though

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,6 @@
 Daniel Nicoletti <dantti12@gmail.com>
 
 Matthias Klumpp <matthias@tenstral.net>
+
+Qt5 Port: Martin Grimme <martin.grimme@gmail.com>
+
